--- a/css/middle.css
+++ b/css/middle.css
@@ -17,10 +17,17 @@ html, body
 	opacity: 95%;
 }
 
+p
+{
+	font-size: 1.2rem;
+}
+
 li
 {
 	font-weight: bold;
 	font-style: italic;
+	color: red;
+	padding-top: 1.8rem;
 }
 
 h3
@@ -32,6 +39,19 @@ h3
 	padding: 2px;
 	padding-left: 4px;
 	border-radius: 4px;
+}
+
+h4
+{
+	color: black;
+	font-size: 1.2rem;
+	line-height: 1.1rem;
+	padding-top: 1.8rem;
+}
+
+hr
+{
+	width: 90%;
 }
 
 
@@ -65,10 +85,44 @@ h3
 	border-radius: 60px;
 	height: auto;
 	box-shadow: 0px 0px 6px lightgray;
+	margin-left: 10px;
 }
+
 #intro-div
 {
 	min-height: 200px; 
-	padding: 2em;
-	padding-top: 1em;
+	padding-left: 3rem;
 }
+
+#langBodyDiv
+{
+	padding-left: 1.5rem;
+	padding-right: 3rem;
+}
+
+.otherBodyDivs
+{
+	padding-left: 3rem;
+	padding-right: 3rem;
+}
+.linksTable
+{
+	margin: auto;
+	text-align: center;
+	background-color: aliceblue;
+	padding: 0.5rem;
+	border-style: solid;
+	border-collapse: collapse;
+	box-shadow: 2px 2px 4px blue;
+}
+.linksTable th
+{
+	background-color: rgb(144, 171, 195);
+	/* margin: 1.5rem; */
+}
+
+.linksTable td, .linksTable th
+{
+	border-style: solid;
+	padding: 0.5rem;
+} 
