--- a/css/middle.css
+++ b/css/middle.css
@@ -11,10 +11,14 @@ html, body
 	width: 100vw;
 	margin: 0px;
 	font-family: Arial, Helvetica, sans-serif;
-	background-image: url("../images/bkg.png");
-	background-size: cover;
 	color: darkblue;
 	opacity: 95%;
+}
+
+body
+{
+    background-image: url("../images/bkg.png");
+	background-size: cover;
 }
 
 p
