--- a/css/middle.css
+++ b/css/middle.css
@@ -126,6 +126,28 @@ hr
 
 .linksTable td, .linksTable th
 {
+	position: relative;
 	border-style: solid;
 	padding: 0.5rem;
 } 
+
+.tableTip
+{
+	visibility: hidden;
+	width: 120px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+	position: absolute;
+	top: 0px;
+	left: -60px;
+	z-index: 1;
+}
+
+.linksTable td:hover .tableTip
+{
+	background-color:red; 
+	 visibility: visible; 
+}
