Popup content populated from a JSON created for easy editing of content

--- a/css/popup.css
+++ b/css/popup.css
@@ -6,10 +6,10 @@
 	border: 3px solid mediumblue;
 	padding: 20px;
 	text-align: center;
-	width: 400px;
-	height: 200px;	
-	right: calc(50% - 200px);
-	top: calc(50% - 100px);
+	width: 350px;
+	height: 500px;	
+	right: calc(50% - 175px);
+	top: calc(50% - 250px);
     /* transform: translate(-50%, -50%); */
 	visibility: hidden;
 	z-index: 2;
@@ -18,6 +18,8 @@
 #popUpBox h4
 {
     color:red;
+	line-height: 1.3px;
+	padding-top: 0px;
 }
 #closePopUp
 {
