--- a/css/middle.css
+++ b/css/middle.css
@@ -32,6 +32,7 @@ li
 	font-style: italic;
 	color: red;
 	padding-top: 1.8rem;
+	line-height: 1rem;
 }
 
 h3
@@ -50,7 +51,7 @@ h4
 	color: black;
 	font-size: 1.2rem;
 	line-height: 1.1rem;
-	padding-top: 1.8rem;
+	padding-top: 1.1rem;
 }
 
 hr
@@ -151,3 +152,5 @@ hr
 	background-color:red; 
 	 visibility: visible; 
 }
+
+
