--- a/css/popup.css
+++ b/css/popup.css
@@ -24,7 +24,33 @@
 #closePopUp
 {
     position: absolute;
-    font-size: 20px;
+	color:darkblue;
+    font-size: 25px;
+	width: 25px;
+	padding: 3px;
     right: 20px;
     top: 20px;
+	border-style: solid;
+	border-radius: 50%;
+	background-color: lightskyblue
+}
+
+.closeTip
+{
+	visibility: hidden;
+	width: 120px;
+	font-size: 1rem;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+	position: absolute;
+	top: 0px;
+	right: 45px;
+	z-index: 2;
+}
+#closePopUp:hover .closeTip
+{
+	background-color:red; 
+	visibility: visible; 
 }
