--- a/css/middle.css
+++ b/css/middle.css
@@ -11,8 +11,6 @@ html, body
 	width: 100vw;
 	margin: 0px;
 	font-family: Arial, Helvetica, sans-serif;
-	color: darkblue;
-	opacity: 95%;
 }
 
 body
@@ -59,12 +57,17 @@ hr
 	width: 90%;
 }
 
+#headShot
+	{
+		width: 10%;
+		min-width: 100px;
+		height: auto;
+	}
 
 .middleInner
 {
 	position: relative;
 	padding: 2rem;
-	/* overflow-y: auto; */
 	max-height: 70vw;
 }
 
@@ -172,10 +175,7 @@ hr
 		padding-right: 0.4rem;
 	}
 
-	#headShot
-	{
-		content: url("../images/mugshotSml.png");
-	}
+	
 	
 }
 
