--- a/css/popup.css
+++ b/css/popup.css
@@ -1,7 +1,7 @@
 #popUpBox
 {
 	position: absolute;
-	background-color: linen;
+	background-color: rgba(250, 240, 230, 1);
 	border-radius: 25px;
 	border: 3px solid mediumblue;
 	padding: 20px;
@@ -13,6 +13,7 @@
     /* transform: translate(-50%, -50%); */
 	visibility: hidden;
 	z-index: 2;
+	/* opacity: 100%; */
 }
 
 #popUpBox h4
